src/tintin.h

/************************ structures *********************/

struct listroot
{
	struct listnode      ** list;
	struct session        * ses;
	int                     size;
	int                     used;
	int                     update;
	int                     multi_update;
	short                   type;
	short                   flags;
};
struct listnode
{
	struct listroot       * root; // variable
	char                  * arg1;
	char                  * arg2;
	char                  * arg3;
	char                  * arg4;
	char                  * group;
	unsigned int            shots;
	int                     flags;
	union
	{
		pcre2_code        * regex;      // act, alias, gag, highlight, substitute
		char              * data;       // class
		struct room_data  * room;       // terrain
		long long           val64;      // delay, tick, path
		short               val16[4];   // button
		int                 val32[2];   // landmark, event, pathdir
	};
};
struct tintin_data
{
	struct session        * ses;
	struct session        * update;
	struct session        * dispose_next;
	struct session        * dispose_prev;
	struct listroot       * dispose_list;
	struct listroot       * banner_list;
	struct chat_data      * chat;
	struct screen_data    * screen;
	struct level_data     * level;
	struct memory_data    * memory;
	struct system_data    * system;
	struct termios          old_terminal;
	char                  * detach_file;
	int                     detach_port;
	struct process_data     detach_info;
	int                     detach_sock;
	char                 *  attach_file;
	int                     attach_pid;
	int                     attach_sock;
//	int                     daemon;
	char                  * buf;
	char                  * out;
	char                  * mud_output_buf;
	int                     mud_output_max;
	int                     mud_output_len;
	char                  * mud_output_strip_buf;
	int                     mud_output_strip_len;
	char                  * mud_output_line;
	unsigned char         * mccp_buf;
	int                     mccp_len;
	char                    macro_buf[BUFFER_SIZE];
	char                    is_result[NUMBER_SIZE];
	time_t                  time;
	time_t                  time_daemon;
	time_t                  time_input;
	time_t                  time_session;
	unsigned long long      utime;
	unsigned long long      utime_next_delay;
	unsigned long long      utime_next_tick;
	long long               total_io_exec;
	long long               total_io_delay;
	long long               convert_time;
	int                     history_size;
	unsigned short          command_ref[32];
	int                     msdp_table_size;
	int                     flags;
	int                     event_flags;
	struct scriptroot     * script_stack[STACK_SIZE];
	int                     script_index;
	char                    tintin_char;
	char                    verbatim_char;
	char                    repeat_char;
	PCRE2_SIZE              match[202];
	char                  * vars[100];
	char                  * cmds[100];
	int                     args[100];
	int                     varc;
	int                     cmdc;
	char                    color_reset[COLOR_SIZE];
};
struct session
{
	struct session        * next;
	struct session        * prev;
	struct map_data       * map;
	struct port_data      * port;
	z_stream              * mccp2;
	z_stream              * mccp3;
	gnutls_session_t        ssl;
	struct termios          cur_terminal;
	struct log_data       * log;
	struct scroll_data    * scroll;
	struct split_data     * split;
	struct input_data     * input;
	char                  * name;
	char                  * group;
	char                  * line_capturefile;
	int                     line_captureindex;
	int                     gagline;
	struct listroot       * list[LIST_MAX];
	time_t                  created;
	int                     cur_row;
	int                     sav_row;
	int                     cur_col;
	int                     sav_col;
	int                     wrap;
	int                     fgc;
	int                     bgc;
	int                     vtc;
	int                     socket;
	int                     telopts;
	int                     telopt_flag[8];
	int                     event_flags;
        int                     config_flags;
	int                     flags;
	int                     charset;
	char                  * session_host;
	char                  * session_ip;
	char                  * session_port;
	char                  * cmd_color;
	unsigned char         * read_buf;
	int                     read_len;
	int                     read_max;
	unsigned long long      connect_retry;
	int                     connect_error;
//	char                    more_output[BUFFER_SIZE];
	char                  * more_output;
	int                     color;
	char                    color_patch[100];
	unsigned long long      packet_patch;
	unsigned long long      check_output;
	int                     scrollback_tab;
	int                     tab_width;
	unsigned long long      rand;
	unsigned short          rkey;
	struct port_data      * proxy;
};
struct edit_data
{
	struct row_data      ** line;
	int                     used;
	int                     size;
	int                     update;
};
extern void reset_daemon(void);
extern void winch_daemon(void);
extern void kill_list(struct listroot *root);
extern void free_list(struct listroot *root);
extern  int show_node_with_wild(struct session *ses, char *cptr, struct listroot *root);
extern void show_node(struct listroot *root, struct listnode *node, int level);
extern void show_nest(struct listnode *node, char *result);
extern void show_list(struct listroot *root, int level);
extern void remove_node_list(struct session *ses, int type, struct listnode *node);
extern void remove_index_list(struct listroot *root, int index);
extern void dispose_node(struct listnode *node);
extern void delete_node(struct session *ses, int type, struct listnode *node);
extern void delete_node_list(struct session *ses, int type, struct listnode *node);
extern  int delete_node_with_wild(struct session *ses, int index, char *string);
extern void delete_index_list(struct listroot *root, int index);
extern  int search_index_list(struct listroot *root, char *text, char *priority);
extern  int locate_index_list(struct listroot *root, char *text, char *priority);
extern  int bsearch_alpha_list(struct listroot *root, char *text, int seek);
extern  int bsearch_alnum_list(struct listroot *root, char *text, int seek);
extern  int bsearch_priority_list(struct listroot *root, char *text, char *priority, int seek);
extern  int nsearch_list(struct listroot *root, char *text);
extern struct listroot *init_list(struct session *ses, int type, int size);
extern struct listroot *copy_list(struct session *ses, struct listroot *sourcelist, int type);
extern struct listnode *create_node(char *arg1, char *arg2, char *arg3, char *arg4);
extern struct listnode *create_node_list(struct listroot *root, char *arg1, char *arg2, char *arg3, char *arg4);
extern struct listnode *insert_node_list(struct listroot *root, struct listnode *node);
extern struct listnode *insert_index_list(struct listroot *root, struct listnode *node, int index);
extern struct listnode *update_node_list(struct listroot *root, char *arg1, char *arg2, char *arg3, char *arg4);
extern struct listnode *search_node_list(struct listroot *root, char *text);
extern void push_call(char *format, ...);
extern  int push_call_printf(char *format, ...);
extern void pop_call(void);
extern void dump_stack(void);
extern int spellcheck_count(struct session *ses, char *in);
extern int cursor_dictionary_tab_add(int stop_after_first);
extern struct edit_data *create_editor(void);
extern void enable_editor(struct edit_data *edit);
extern void delete_editor(struct edit_data *edit);
extern void resize_editor(struct edit_data *edit, int size);
extern void clear_editor(struct edit_data *edit);
extern  int str_save_editor(struct edit_data *edit, char **str);
extern  int var_save_editor(struct edit_data *edit, char **str);
extern void create_line(struct edit_data *edit, int index, char *str);
extern void delete_line(struct edit_data *edit, int index);
extern void insert_line(struct edit_data *edit, int index, char *str);
extern void remove_line(struct edit_data *edit, int index);
//extern DO_COMMAND(do_event);
//extern DO_COMMAND(do_unevent);

extern  int check_all_events(struct session *ses, int flags, int args, int vars, char *fmt, ...);
extern void mouse_handler(struct session *ses, int val1, int val2, int val3);
extern struct session *read_file(struct session *ses, FILE *fp, char *filename);
extern void write_node(struct session *ses, int mode, struct listnode *node, FILE *file);
extern char *fread_one_line(char **str, FILE *fp);
extern void add_line_history(struct session *ses, char *line);
extern void insert_line_history(struct session *ses, char *line);
extern struct session *repeat_history(struct session *ses, char *line);
extern int write_history(struct session *ses, char *filename);
extern int read_history(struct session *ses, char *filename);
extern void logheader(struct session *ses, FILE *file, int newline);
extern void init_log(struct session *ses);
extern void free_log(struct session *ses);
extern void logit(struct session *ses, char *txt, FILE *file, int newline);
extern void write_html_header(struct session *ses, FILE *fp);
extern void vt102_to_html(struct session *ses, char *txt, char *out);
extern struct session *gts;
extern struct tintin_data *gtd;
extern void winch_handler(int signal);
extern void abort_handler(int signal);
extern void pipe_handler(int signal);
extern void suspend_handler(int signal);
extern void trap_handler(int signal);
extern  int main(int argc, char **argv);
extern void init_tintin(int greeting);
extern void quitmsg(char *message);
extern void syserr_fatal(int signal, char *msg);
extern void syserr_printf(struct session *ses, char *fmt, ...);
void *zlib_alloc(void *opaque, unsigned int items, unsigned int size);
void  zlib_free(void *opaque, void *address);
extern char *restring(char *point, char *string);
extern char *restringf(char *point, char *fmt, ...);
extern void init_memory(void);