src/math.zig

pub extern fn do_configure(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_daemon(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn daemon_attach(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn daemon_detach(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn daemon_input(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn daemon_kill(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn daemon_list(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn reset_daemon() void;
pub extern fn winch_daemon() void;
pub extern fn do_kill(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn kill_list(root: [*c]struct_listroot) void;
pub extern fn free_list(root: [*c]struct_listroot) void;
pub extern fn show_node_with_wild(ses: [*c]struct_session, cptr: [*c]u8, root: [*c]struct_listroot) c_int;
pub extern fn show_node(root: [*c]struct_listroot, node: [*c]struct_listnode, level: c_int) void;
pub extern fn show_nest(node: [*c]struct_listnode, result: [*c]u8) void;
pub extern fn show_list(root: [*c]struct_listroot, level: c_int) void;
pub extern fn remove_node_list(ses: [*c]struct_session, @"type": c_int, node: [*c]struct_listnode) void;
pub extern fn remove_index_list(root: [*c]struct_listroot, index: c_int) void;
pub extern fn dispose_node(node: [*c]struct_listnode) void;
pub extern fn delete_node(ses: [*c]struct_session, @"type": c_int, node: [*c]struct_listnode) void;
pub extern fn delete_node_list(ses: [*c]struct_session, @"type": c_int, node: [*c]struct_listnode) void;
pub extern fn delete_node_with_wild(ses: [*c]struct_session, index: c_int, string: [*c]u8) c_int;
pub extern fn delete_index_list(root: [*c]struct_listroot, index: c_int) void;
pub extern fn search_index_list(root: [*c]struct_listroot, text: [*c]u8, priority: [*c]u8) c_int;
pub extern fn locate_index_list(root: [*c]struct_listroot, text: [*c]u8, priority: [*c]u8) c_int;
pub extern fn bsearch_alpha_list(root: [*c]struct_listroot, text: [*c]u8, seek: c_int) c_int;
pub extern fn bsearch_alnum_list(root: [*c]struct_listroot, text: [*c]u8, seek: c_int) c_int;
pub extern fn bsearch_priority_list(root: [*c]struct_listroot, text: [*c]u8, priority: [*c]u8, seek: c_int) c_int;
pub extern fn nsearch_list(root: [*c]struct_listroot, text: [*c]u8) c_int;
pub extern fn init_list(ses: [*c]struct_session, @"type": c_int, size: c_int) [*c]struct_listroot;
pub extern fn copy_list(ses: [*c]struct_session, sourcelist: [*c]struct_listroot, @"type": c_int) [*c]struct_listroot;
pub extern fn create_node(arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_listnode;
pub extern fn create_node_list(root: [*c]struct_listroot, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_listnode;
pub extern fn insert_node_list(root: [*c]struct_listroot, node: [*c]struct_listnode) [*c]struct_listnode;
pub extern fn insert_index_list(root: [*c]struct_listroot, node: [*c]struct_listnode, index: c_int) [*c]struct_listnode;
pub extern fn update_node_list(root: [*c]struct_listroot, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_listnode;
pub extern fn search_node_list(root: [*c]struct_listroot, text: [*c]u8) [*c]struct_listnode;
pub extern fn push_call(format: [*c]u8, ...) void;
pub extern fn push_call_printf(format: [*c]u8, ...) c_int;
pub extern fn pop_call() void;
pub extern fn dump_stack() void;
pub extern fn do_dictionary(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn spellcheck_count(ses: [*c]struct_session, in: [*c]u8) c_int;
pub extern fn cursor_dictionary_tab_add(stop_after_first: c_int) c_int;
pub extern fn do_edit(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn edit_create(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn edit_load(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn edit_read(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn edit_resume(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn edit_save(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn edit_suspend(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn edit_write(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn create_editor() [*c]struct_edit_data;
pub extern fn enable_editor(edit: [*c]struct_edit_data) void;
pub extern fn delete_editor(edit: [*c]struct_edit_data) void;
pub extern fn resize_editor(edit: [*c]struct_edit_data, size: c_int) void;
pub extern fn clear_editor(edit: [*c]struct_edit_data) void;
pub extern fn str_save_editor(edit: [*c]struct_edit_data, str: [*c][*c]u8) c_int;
pub extern fn var_save_editor(edit: [*c]struct_edit_data, str: [*c][*c]u8) c_int;
pub extern fn create_line(edit: [*c]struct_edit_data, index: c_int, str: [*c]u8) void;
pub extern fn delete_line(edit: [*c]struct_edit_data, index: c_int) void;
pub extern fn insert_line(edit: [*c]struct_edit_data, index: c_int, str: [*c]u8) void;
pub extern fn remove_line(edit: [*c]struct_edit_data, index: c_int) void;
pub extern fn do_draw(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn check_all_events(ses: [*c]struct_session, flags: c_int, args: c_int, vars: c_int, fmt: [*c]u8, ...) c_int;
pub extern fn mouse_handler(ses: [*c]struct_session, val1: c_int, val2: c_int, val3: c_int) void;
pub extern fn do_read(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_write(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn read_file(ses: [*c]struct_session, fp: [*c]FILE, filename: [*c]u8) [*c]struct_session;
pub extern fn write_node(ses: [*c]struct_session, mode: c_int, node: [*c]struct_listnode, file: [*c]FILE) void;
pub extern fn fread_one_line(str: [*c][*c]u8, fp: [*c]FILE) [*c]u8;
pub extern fn do_help(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_history(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn add_line_history(ses: [*c]struct_session, line: [*c]u8) void;
pub extern fn insert_line_history(ses: [*c]struct_session, line: [*c]u8) void;
pub extern fn repeat_history(ses: [*c]struct_session, line: [*c]u8) [*c]struct_session;
pub extern fn write_history(ses: [*c]struct_session, filename: [*c]u8) c_int;
pub extern fn read_history(ses: [*c]struct_session, filename: [*c]u8) c_int;
pub extern fn history_delete(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn history_get(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn history_insert(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn history_list(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn history_read(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn history_write(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) void;
pub extern fn do_line(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn line_background(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_benchmark(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_capture(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_convert(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_debug(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_gag(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_ignore(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_json(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_local(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_log(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_logmode(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_logverbatim(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_msdp(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_multishot(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_oneshot(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_quiet(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_strip(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_substitute(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_verbatim(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn line_verbose(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8) [*c]struct_session;
pub extern fn logheader(ses: [*c]struct_session, file: [*c]FILE, newline: c_int) void;
pub extern fn init_log(ses: [*c]struct_session) void;
pub extern fn free_log(ses: [*c]struct_session) void;
pub extern fn logit(ses: [*c]struct_session, txt: [*c]u8, file: [*c]FILE, newline: c_int) void;
pub extern fn write_html_header(ses: [*c]struct_session, fp: [*c]FILE) void;
pub extern fn vt102_to_html(ses: [*c]struct_session, txt: [*c]u8, out: [*c]u8) void;
pub extern var gts: [*c]struct_session;
pub extern var gtd: [*c]struct_tintin_data;
pub extern fn winch_handler(signal: c_int) void;
pub extern fn abort_handler(signal: c_int) void;
pub extern fn pipe_handler(signal: c_int) void;
pub extern fn suspend_handler(signal: c_int) void;
pub extern fn trap_handler(signal: c_int) void;
pub extern fn main(argc: c_int, argv: [*c][*c]u8) c_int;
pub extern fn init_tintin(greeting: c_int) void;
pub extern fn quitmsg(message: [*c]u8) void;
pub extern fn syserr_fatal(signal: c_int, msg: [*c]u8) void;
pub extern fn syserr_printf(ses: [*c]struct_session, fmt: [*c]u8, ...) void;
pub extern fn zlib_alloc(@"opaque": ?*anyopaque, items: c_uint, size: c_uint) ?*anyopaque;
pub extern fn zlib_free(@"opaque": ?*anyopaque, address: ?*anyopaque) void;
pub extern fn restring(point: [*c]u8, string: [*c]u8) [*c]u8;
pub extern fn restringf(point: [*c]u8, fmt: [*c]u8, ...) [*c]u8;
pub extern fn init_memory() void;
